--- a/app/globals.css
+++ b/app/globals.css
@@ -464,3 +464,12 @@ code {
     @apply bg-background text-foreground;
   }
 }
+
+@layer components {
+  .sidebar-container {
+    @apply min-h-screen w-auto background-light900_dark200 shadow-light-300 dark:shadow-none p-6 lg:w-[266px];
+  }
+  .sidebar-content {
+    @apply size-full flex flex-col justify-between relative;
+  }
+}
